--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
